--- a/whwfinalproject/package.json
+++ b/whwfinalproject/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-   "build": "prisma generate && next build"
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
-  },
+  }
+}
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.5.6",
     "@prisma/client": "^6.8.2",
